Indexers now gracefully die on request, after indexing there current page, rescue from 'Encoding::CompatibilityError' and mark as crawled to prevent spamming url.

--- a/lib/app/views/index.slim
+++ b/lib/app/views/index.slim
@@ -1,5 +1,5 @@
 h1 Royageur #{Royageur::VERSION}
-p Royageur is a programs that's, a basic, functional, obedent, web crawler.
+p Royageur is a program that's, a basic, functional, obedient, web crawler.
 h2 Platform: #{RUBY_PLATFORM}/#{RUBY_ENGINE} #{RUBY_VERSION}
 h2 Memory usage: #{OS.rss_bytes/1024}MB
 h2 title="one minute average" CPU Load Average: #{@vmstat.load_average.one_minute} of #{OS.cpu_count}.0
